<resources>
    <string name="app_name">Mentorme</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="Password">Password</string>
    <string name="EnterYourPassword">Enter your password</string>
    <string name="ForgotYourPassword">Forgot Your Password?</string>
    <string name="DontHaveAnAccount">Don\'t have an account?</string>
    <string name="GetStarted">Get Started!</string>
    <string name="Name">Name</string>
    <string name="EnterName">Enter Name</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="EnterContactNumber">Enter Contact Number</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="PasswordMustBeAtLeast8CharactersLong">Password must be at least 8 characters long</string>
    <string name="SignUp">Sign Up</string>
    <string name="Log_in">Log in</string>
    <string name="AlreadyHaveAnAccount">Already have an account?</string>
    <string name="VerifyYourPhoneNumber">Verify your phone number</string>
    <string name="WeveSentACodEeTo923325618881">We’ve sent a code to +92 3325618881</string>
    <string name="Verify">Verify</string>
    <string name="SendCodAgain">Send code again</string>
    <string name="Time0020">00:20</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="DontWorry">Don’t worry! It happens. Please enter the email associated with your account.</string>
    <string name="SEND">SEND</string>
    <string name="RememberYourPassword">Remember your password?</string>
    <string name="ResetPasswordQUESTION">Reset Password?</string>
    <string name="PleaseEnterAnewPasword">Please type a new password and re-enter the password. Type something you will remember!</string>
    <string name="NewPassword">New Password</string>
    <string name="EnterNewPassword">Enter New Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ReenterPassword">Re-enter Password</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Dontwanttoresetpassword">Don’t want to reset password?</string>
    <string name="Hello">Hello,</string>
    <string name="Ali">Ali</string>
    <string name="ReadyformentorshipLetsbeginthejourney">Ready for mentorship? Let’s begin the journey!</string>
    <string name="All">All</string>
    <string name="Education">Education</string>
    <string name="Entrepreneurship">Entrepreneurship</string>
    <string name="PersonalGrowth">Personal Growth</string>
    <string name="Career">Career</string>
    <string name="TopMentorsforyou">Top Mentors for you</string>
    <string name="ViewAll">View All</string>
    <string name="JohnCooper">John Cooper</string>
    <string name="UXDesignerGoogle">UX Designer @ Google</string>
    <string name="BulletPoint">\u2022</string>
    <string name="Available">Available</string>
    <string name="Session1500">$1500/Session</string>
    <string name="MartinaWatson">Martina Watson</string>
    <string name="LeadTechnologyOfficer">Lead - Technology Officer</string>
    <string name="NotAvailable">Not Available</string>
    <string name="Session500">$500/Session</string>
    <string name="Emma">Emma</string>
    <string name="LeadCorporate">Lead - Corporate</string>
    <string name="EducationMentors">Education Mentors</string>
    <string name="MichaelDrake">All</string>
    <string name="NLPExpert">NLP Expert</string>
    <string name="Session900">$900/Session</string>
    <string name="Alex">Alex</string>
    <string name="AndroidDeveloper">Android Developer</string>
    <string name="Session200">$200/Session</string>
    <string name="Jane">Jane</string>
    <string name="SoftwareEngineer">Software Engineer</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Chat">Chat</string>
    <string name="Profile">Profile</string>
    <string name="RecentMentors">Recent Mentors</string>
    <string name="LetsFind">Let’s Find...</string>
    <string name="Recentsearches">Recent searches</string>
    <string name="Mentor1">Mentor 1</string>
    <string name="Mentor2">Mentor 2</string>
    <string name="Mentor3">Mentor 3</string>
    <string name="BrowseCategories">Browse Categories</string>

    <string name="HIjohncooper">Hi, I’m John Cooper</string>

    <string name="UX">UX Designer at Google</string>
    <string name="Aboutme">About me</string>
    <string name="Iampassionate">I am a passionate UX designer at Google with a focus on
creating user-centric and intuitive interfaces. With 10 years of
experience, I have had the opportunity to work on diverse
projects that have shaped my understanding of design
principles and user experience.</string>
    <string name="MyExpertise">My Expertise Include</string>
    <string name="CareerAdvice">Career Advice</string>
    <string name="UserExperience">User Experience</string>
    <string name="Leadership">Leadership</string>
    <string name="Dropreview">Drop a review</string>
    <string name="JoinCommunity">Join Community</string>
    <string name="BookaSession">Book a Session</string>


    <string-array name="country_array">
        <item>Select Country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
    </string-array>

    <string-array name="city_array">
        <item>Select City</item>
        <item>New York</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>Houston</item>
        <item>Phoenix</item>
        <item>Philadelphia</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>Dallas</item>
        <item>San Jose</item>
        <item>Austin</item>
        <item>Jacksonville</item>
        <item>Fort Worth</item>
        <item>Columbus</item>
        <item>Charlotte</item>
        <item>San Francisco</item>
        <item>Indianapolis</item>
        <item>Seattle</item>
        <item>Denver</item>
        <item>Washington</item>
        <item>Boston</item>
        <item>El Paso</item>
        <item>Nashville</item>
        <item>Detroit</item>
        <item>Oklahoma City</item>
        <item>Portland</item>
        <item>Las Vegas</item>
        <item>Memphis</item>
        <item>Louisville</item>
        <item>Baltimore</item>
        <item>Milwaukee</item>
        <item>Albuquerque</item>
        <item>Tucson</item>
        <item>Fresno</item>
        <item>Sacramento</item>
        <item>Kansas City</item>
        <item>Long Beach</item>
        <item>Mesa</item>
        <item>Atlanta</item>
        <item>Miami</item>
        <item>Colorado Springs</item>
        <item>Raleigh</item>
        <item>Omaha</item>
        <item>Long Beach</item>
        <item>Virginia Beach</item>
        <item>Oakland</item>
        <item>Minneapolis</item>
        <item>Tulsa</item>
        <item>Arlington</item>
        <item>New Orleans</item>
        <!-- Add other cities as needed -->
    </string-array>


    <string-array name="status_array">
        <item>Availabley</item>
        <item>Not Available</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>