<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    tools:context=".MainActivity">


    <!-- BLUE BACKGROUND-->
    <View
        android:id="@+id/blueBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAppLogo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <!-- BUBBLES IMAGE-->
    <ImageView
        android:id="@+id/ivBubbles"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/bubbles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- APP LOGO IMAGE-->
    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="280dp"
        android:layout_height="95dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- DON'T HAVE ACCOUNT? LOG IN -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/textViewGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- GET STARTED LABEL -->
            <TextView
                android:id="@+id/GetStartedID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GetStarted"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="165dp"
                android:layout_marginStart="40dp"/>


            <!-- NAME LABEL -->
            <TextView
                android:id="@+id/NameID"
                style="@style/MyWidgetTextView"
                android:text="@string/Name"/>

            <!-- NAME INPUT BAR -->
            <EditText
                android:id="@+id/NameInputID"
                style="@style/MyWidgetEditText"
                android:hint="@string/EnterName"
                android:inputType="textPersonName"/>

            <!-- EMAIL LABEL -->
            <TextView
                android:id="@+id/EmailID"
                style="@style/MyWidgetTextView"
                android:text="@string/Email"/>

            <!-- EMAIL INPUT BAR -->
            <EditText
                android:id="@+id/EmailInputID"
                style="@style/MyWidgetEditText"
                android:hint="@string/EnterEmail"
                android:inputType="textEmailAddress"/>

            <!-- CONTACT NUMBER LABEL -->
            <TextView
                android:id="@+id/ContactNumberID"
                style="@style/MyWidgetTextView"
                android:text="@string/ContactNumber"/>

            <!-- CONTACT NUMBER INPUT BAR -->
            <EditText
                android:id="@+id/ContactNumberInputID"
                style="@style/MyWidgetEditText"
                android:hint="@string/EnterContactNumber"
                android:inputType="phone"/>

            <!-- COUNTRY LABEL -->
            <TextView
                android:id="@+id/CountryID"
                style="@style/MyWidgetTextView"
                android:text="@string/Country"/>

            <!-- COUNTRY SPINNER -->
            <Spinner
                android:id="@+id/CountrySpinnerID"
                style="@style/MyWidgetSpinner"
                android:entries="@array/country_array"/>

            <!-- CITY LABEL -->
            <TextView
                android:id="@+id/CityID"
                style="@style/MyWidgetTextView"
                android:text="@string/City"/>

            <!-- CITY SPINNER -->
            <Spinner
                android:id="@+id/CitySpinnerID"
                style="@style/MyWidgetSpinner"
                android:entries="@array/city_array"/>

            <!-- PASSWORD LABEL -->
            <TextView
                android:id="@+id/PasswordID"
                style="@style/MyWidgetTextView"
                android:text="@string/Password"/>

            <!-- PASSWORD INPUT BAR -->
            <EditText
                android:id="@+id/PasswordInputID"
                style="@style/MyWidgetEditText"
                android:hint="@string/EnterYourPassword"
                android:inputType="textPassword"/>

            <!-- PASSWORD MESSAGE -->
            <TextView
                android:id="@+id/PasswordMessageID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PasswordMustBeAtLeast8CharactersLong"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:layout_marginStart="45dp"/>

            <!-- SIGN UP BUTTON -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/SignUp"
                android:textColor="@color/tealish"
                android:layout_marginTop="8dp"
                android:layout_marginStart="100dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_squircle_input" />


        </LinearLayout>

    </RelativeLayout>


        <!--DONT HAVE ACCOUNT? LOG IN -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/textViewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="11dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AlreadyHaveAnAccount"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/Log_in"
                    android:textColor="@color/Dark_teal"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>