<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    tools:context=".ForgotPasswordActivity">



    <ImageButton
        android:id="@+id/back2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Reset PASSWORD -->
            <TextView
                android:id="@+id/ResetPasswordID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ResetPasswordQUESTION"
                android:textSize="30sp"
                android:textColor="@color/Dark_teal"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginStart="40dp"/>

            <!-- Don’t worry! It happens. Please enter the email associated with your account. LABEL -->
            <TextView
                android:id="@+id/PleaseTypeNewPasswordID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PleaseEnterAnewPasword"
                android:textSize="16sp"
                android:textColor="@color/Dark_teal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"/>

            <!-- NEW Password LABEL -->
            <TextView
                android:id="@+id/newPasswodLabelID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NewPassword"
                android:textSize="20sp"
                android:textColor="@color/Dark_teal"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"/>

            <!--Password INPUT BAR-->
            <EditText
                android:id="@+id/NewPasswInputID"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:hint="@string/EnterNewPassword"
                android:textSize="16sp"
                android:textColor="@color/gray_tone"
                android:textColorHint="@color/gray_tone"
                android:layout_marginTop="3dp"
                android:layout_marginStart="40dp"
                android:inputType="textPassword"
                android:background="@drawable/bg_squircle_input" />



            <!-- CONFRIM NEW Password LABEL -->
            <TextView
                android:id="@+id/ReEnternewPasswodLabelID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ConfirmPassword"
                android:textSize="20sp"
                android:textColor="@color/Dark_teal"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"/>

            <!--YCONFRIM Password INPUT BAR-->
            <EditText
                android:id="@+id/ReEnterNewPasswInputID"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:hint="@string/ReenterPassword"
                android:textSize="16sp"
                android:textColor="@color/gray_tone"
                android:textColorHint="@color/gray_tone"
                android:layout_marginTop="3dp"
                android:layout_marginStart="40dp"
                android:inputType="textPassword"
                android:background="@drawable/bg_squircle_input" />


            <!-- Reset BUTTON -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ResetButtonID"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="100dp"
                android:background="@drawable/verify_button_bg_squircle_input"
                android:text="@string/ResetPassword"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/textViewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DontwanttoReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:text="@string/Dontwanttoresetpassword"/>

                <TextView
                    android:id="@+id/LoginLabelID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/Dark_teal"
                    android:textStyle="bold"
                    android:text="@string/Login"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>